--- a/records/templates/records/zaklad-form.html
+++ b/records/templates/records/zaklad-form.html
@@ -12,21 +12,26 @@
         <br>
     </form>
     {% else %}
-    <div>
-        <h2>Dane wyjsciowe</h2>
-        <p>Wynik techniczny: {{wynik_techniczny}}</p>
-        <p>Skladki {{skladki}}</p>
-        <p>Zysk (strata) netto: {{zysk_strata_netto}}</p>
-        <p>Skladki przypisane brutto:{{skladki_przypisane_brutto}} </p>
-        <p>Aktywa razem: {{aktywa_razem}}</p>
-        <p>Kapitał (fundusz) własny: {{kapital_fundusz_wlasny}}</p> 
+    <div class="row shadow">
+        <div class="col-md-2"><h2>Dane wyjsciowe</h2></div>
+        <div class="col-md-8">
+            <p>Wynik techniczny: {{wynik_techniczny}}</p>
+            <p>Skladki {{skladki}}</p>
+            <p>Zysk (strata) netto: {{zysk_strata_netto}}</p>
+            <p>Skladki przypisane brutto:{{skladki_przypisane_brutto}} </p>
+            <p>Aktywa razem: {{aktywa_razem}}</p>
+            <p>Kapitał (fundusz) własny: {{kapital_fundusz_wlasny}}</p>
+        </div>
     </div> 
-    <div>
-        <h2>Wyniki</h2>
-        <p>Rentownosc dzilalnosci technicznej {{rentownosc_dzialalnosci_technicznej}} %</p>
-        <p>Rentownosc sprzedazy: {{rentownosc_sprzedazy}} %</p>
-        <p>Rentownosc aktywow: {{rentownosc_aktywow}} %</p>
-        <p>Rentownosc kapitalu wlasnego: {{rentownosc_kapitalu_wlasnego}} %</p>
+    <hr>
+    <div class="row shadow">
+        <div class="col-md-2"><h2>Wyniki</h2></div>
+        <div class="col-md-8">
+            <p>Rentownosc dzilalnosci technicznej {{rentownosc_dzialalnosci_technicznej}} %</p>
+            <p>Rentownosc sprzedazy: {{rentownosc_sprzedazy}} %</p>
+            <p>Rentownosc aktywow: {{rentownosc_aktywow}} %</p>
+            <p>Rentownosc kapitalu wlasnego: {{rentownosc_kapitalu_wlasnego}} %</p>
+        </div>
     </div>
     {% endif %}
 </div>
