--- a/records/templates/records/bank-form.html
+++ b/records/templates/records/bank-form.html
@@ -1,36 +1,37 @@
 {% extends 'records/base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
-{% block content%}
+{% block content %}
 <div class="container">
-    <h4 class="text-center mt-5 mb-5">Formularz bankowy</h4>
+    <h4 class="text-center mt-5 mb-5">Bank</h4>
     {% if form.errors %}
     <form method="POST" action="{% url 'bank-form' %}">
         {% csrf_token %}
-        <p class="text-muted small text-center">Wartosci nie moga byc mniejsze od zera</p>
+        <p class="text-muted small text-center">Wartości nie mogą być mniejsze od zera</p>
         {% crispy form %}
+        <br>
     </form>
     {% else %}
     <div class="row shadow">
-        <div class="col-md-2"><h2>Dane wyjsciowe</h2></div>
+        <div class="col-md-2"><h2>Dane wejściowe</h2></div>
         <div class="col-md-8">
-            <p>Wynik z tytułu odsetek: {{wynik}}</p>
-            <p>Średnia wartość aktywów oprocentowanych w roku obrotowym: {{srednia}}</p>
-            <p>Koszty działania: {{koszty}}</p>
-            <p>Przychody:{{przychody}} </p>
-            <p>Zysk (strata) netto: {{zysk_strata_netto}}</p>
-            <p>Aktywa razem: {{aktywa_razem}}</p>
-            <p>Kapitał (fundusz) własny: {{kapital_fundusz_wlasny}}</p> 
+            <p>Wynik z tytułu odsetek: {{ wynik }}</p>
+            <p>Średnia wartość aktywów oprocentowanych w roku obrotowym: {{ srednia }}</p>
+            <p>Koszty działania: {{ koszty }}</p>
+            <p>Przychody: {{ przychody }} </p>
+            <p>Zysk (strata) netto: {{ zysk_strata_netto }}</p>
+            <p>Aktywa razem: {{ aktywa_razem }}</p>
+            <p>Kapitał (fundusz) własny: {{ kapital_fundusz_wlasny }}</p> 
         </div>
     </div>
     <hr>
     <div class="row shadow">
         <div class="col-md-2"><h2>Wyniki</h2></div>
         <div class="col-md-8">
-            <p>Marza odsetkowa netto: {{marza_odsetkowa_netto}} %</p>
-            <p>Koszty/dochody: {{koszty_dochody}} %</p>
-            <p>Rentownosc aktywow: {{rentownosc_aktywow}} %</p>
-            <p>Rentownosc kapitalu wlasnego: {{rentownosc_kapitalu_wlasnego}} %</p>
+            <p>Marża odsetkowa netto: {{ marza_odsetkowa_netto }} %</p>
+            <p>Koszty/dochody: {{ koszty_dochody }} %</p>
+            <p>Rentowność aktywów: {{ rentownosc_aktywow }} %</p>
+            <p>Rentowność kapitału własnego: {{ rentownosc_kapitalu_wlasnego }} %</p>
         </div>
     </div>
     {% endif %}
