--- a/records/templates/records/bank-form.html
+++ b/records/templates/records/bank-form.html
@@ -1,5 +1,6 @@
 {% extends 'records/base.html' %}
 {% load crispy_forms_tags %}
+{% load tp_tags %}
 {% load static %}
 {% block content %}
 <div class="container">
@@ -15,25 +16,28 @@
     <div class="row shadow">
         <div class="col-md-2"><h2>Dane wejściowe</h2></div>
         <div class="col-md-8">
-            <p>Wynik z tytułu odsetek: {{ wynik }}</p>
-            <p>Średnia wartość aktywów oprocentowanych w roku obrotowym: {{ srednia }}</p>
-            <p>Koszty działania: {{ koszty }}</p>
-            <p>Przychody: {{ przychody }} </p>
-            <p>Zysk (strata) netto: {{ zysk_strata_netto }}</p>
-            <p>Aktywa razem: {{ aktywa_razem }}</p>
-            <p>Kapitał (fundusz) własny: {{ kapital_fundusz_wlasny }}</p> 
+            <p>Wynik z tytułu odsetek: {{ wynik|thousands }}</p>
+            <p>Średnia wartość aktywów oprocentowanych w roku obrotowym: {{ srednia|thousands }}</p>
+            <p>Koszty działania: {{ koszty|thousands }}</p>
+            <p>Przychody: {{ przychody|thousands }} </p>
+            <p>Zysk (strata) netto: {{ zysk_strata_netto|thousands }}</p>
+            <p>Aktywa razem: {{ aktywa_razem|thousands }}</p>
+            <p>Kapitał (fundusz) własny: {{ kapital_fundusz_wlasny|thousands}}</p> 
         </div>
     </div>
     <hr>
     <div class="row shadow">
         <div class="col-md-2"><h2>Wyniki</h2></div>
         <div class="col-md-8">
-            <p>Marża odsetkowa netto: {{ marza_odsetkowa_netto }} %</p>
-            <p>Koszty/dochody: {{ koszty_dochody }} %</p>
-            <p>Rentowność aktywów: {{ rentownosc_aktywow }} %</p>
-            <p>Rentowność kapitału własnego: {{ rentownosc_kapitalu_wlasnego }} %</p>
+            <p>Marża odsetkowa netto: {{ marza_odsetkowa_netto|floatformat:2 }} %</p>
+            <p>Koszty/dochody: {{ koszty_dochody|floatformat:2 }} %</p>
+            <p>Rentowność aktywów: {{ rentownosc_aktywow|floatformat:2 }} %</p>
+            <p>Rentowność kapitału własnego: {{ rentownosc_kapitalu_wlasnego|floatformat:2 }} %</p>
         </div>
     </div>
     {% endif %}
+    <div class="text-center">
+        <a class="btn btn-outline-primary" href="{% url 'form' %}" role="button">Wróć</a>
+    </div>
 </div>
 {% endblock%}
