--- a/records/templates/records/comparison-form.html
+++ b/records/templates/records/comparison-form.html
@@ -1,5 +1,6 @@
 {% extends 'records/base.html' %}
 {% load crispy_forms_tags %}
+{% load tp_tags %}
 {% load static %}
 {% block content %}
 <div class="container">
@@ -15,30 +16,33 @@
     <div class="row shadow">
         <div class="col-md-2"><h2>Dane wejściowe</h2></div>
         <div class="col-md-6">
-            <p>Zysk (strata) z działalności operacyjnej: {{ zysk_strata_z_dzialalnosci_operacyjnej }}</p>
-            <p>Przychody netto ze sprzedaży i zrównane z nimi: {{ przychody_netto }}</p>
-            <p>Zmiana stanu produktów: {{ zmiana_stanu_produktow }}</p>
-            <p>Koszt wytworzenia świadczeń na potrzeby własne: {{ koszty_swiadczen }}</p>
-            <p>Pozostałe przychody operacyjne: {{ pozostale_przychody_operacyjne }}</p>
+            <p>Zysk (strata) z działalności operacyjnej: {{ zysk_strata_z_dzialalnosci_operacyjnej|thousands }}</p>
+            <p>Przychody netto ze sprzedaży i zrównane z nimi: {{ przychody_netto|thousands }}</p>
+            <p>Zmiana stanu produktów: {{ zmiana_stanu_produktow|thousands }}</p>
+            <p>Koszt wytworzenia świadczeń na potrzeby własne: {{ koszty_swiadczen|thousands }}</p>
+            <p>Pozostałe przychody operacyjne: {{ pozostale_przychody_operacyjne|thousands}}</p>
         </div>
         <div class="col-md-4">
-            <p>Zysk (strata) brutto: {{ zysk_strata_brutto }}</p>
-            <p>Przychody finansowe: {{ przychody_finansowe }}</p> 
-            <p>Zysk (strata) netto: {{ zysk_strata_netto }}</p>
-            <p>Aktywa razem: {{ aktywa_razem }}</p>
-            <p>Kapitał (fundusz) własny: {{ kapital_fundusz_wlasny }}</p>
+            <p>Zysk (strata) brutto: {{ zysk_strata_brutto|thousands }}</p>
+            <p>Przychody finansowe: {{ przychody_finansowe|thousands }}</p> 
+            <p>Zysk (strata) netto: {{ zysk_strata_netto|thousands }}</p>
+            <p>Aktywa razem: {{ aktywa_razem|thousands }}</p>
+            <p>Kapitał (fundusz) własny: {{ kapital_fundusz_wlasny|thousands }}</p>
         </div>        
     </div> 
     <hr>
     <div class="row shadow">
         <div class="col-md-2"><h2>Wyniki</h2></div>
         <div class="col-md-6">
-            <p>Marża operacyjna: {{ marza_operacyjna }} %</p>
-            <p>Marża zysku brutto: {{ marza_zysku_brutto }} %</p>
-            <p>Rentowność aktywów: {{ rentownosc_aktywow }} %</p>
-            <p>Rentowność kapitału własnego: {{ rentownosc_kapitalu_wlasnego }} %</p>
+            <p>Marża operacyjna: {{ marza_operacyjna|floatformat:2 }} %</p>
+            <p>Marża zysku brutto: {{ marza_zysku_brutto|floatformat:2 }} %</p>
+            <p>Rentowność aktywów: {{ rentownosc_aktywow|floatformat:2 }} %</p>
+            <p>Rentowność kapitału własnego: {{ rentownosc_kapitalu_wlasnego|floatformat:2 }} %</p>
         </div>
     </div>
     {% endif %}
+    <div class="text-center">
+        <a class="btn btn-outline-primary" href="{% url 'form' %}" role="button">Wróć</a>
+    </div>
 </div>
 {% endblock%}
